# geotracking-reactive-functional-microservice/src/main/java/com/example/reactive/functional/geotracking/api/handlers/TracksHandler.java
@@ -4,6 +4,7 @@ import com.example.reactive.functional.geotracking.common.util.DateUtil;
 import com.example.reactive.functional.geotracking.dto.GeoPointResponseDTO;
 import com.example.reactive.functional.geotracking.dto.TrackDTO;
 import com.example.reactive.functional.geotracking.service.GeoPointService;
+import com.example.reactive.functional.geotracking.service.LazyService;
 import com.example.reactive.functional.geotracking.service.dto.SearchTrackByCriteria;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -14,6 +15,7 @@ import org.springframework.web.reactive.function.server.ServerRequest;
 import org.springframework.web.reactive.function.server.ServerResponse;
 import org.springframework.web.server.ServerWebInputException;
 import reactor.core.publisher.Mono;
+import reactor.util.function.Tuple3;
 
 import java.time.Duration;
 import java.util.Optional;
@@ -30,6 +32,9 @@ public class TracksHandler {
 
     private final ValidatorHandler validatorHandler;
 
+    private final LazyService lazyService;
+
+
     public Mono<ServerResponse> processTrack(ServerRequest request) {
         return request.bodyToMono(TrackDTO.class)
                 .doOnNext(track -> validatorHandler.validate(track))
@@ -43,18 +48,24 @@ public class TracksHandler {
     public Mono<ServerResponse> getLastPosition(ServerRequest request) {
         final Optional<String> user = request.queryParam("user");
         final Optional<String> deviceId = request.queryParam("deviceId");
+        final Optional<String> testLazyTimeParam = request.queryParam("testLazyTime");
+        final Integer testLazyTime = testLazyTimeParam.isPresent() ? Integer.valueOf(testLazyTimeParam.get()) : 0;
+
+
+        Mono<Integer> lazy = testLazyTime > 0 ? lazyService.sleep(testLazyTime).thenReturn(testLazyTime) : Mono.just(testLazyTime);
 
         if (deviceId.isPresent() && StringUtils.hasLength(deviceId.get())) {
-            return geoPointService.getLastPositionByDeviceId(deviceId.get()).flatMap(geoPoint -> ServerResponse.ok()
-                            .body(fromValue(geoPoint)))
+            return lazy.flatMap( t -> geoPointService.getLastPositionByDeviceId(deviceId.get()))
+                    .flatMap(geoPoint -> ServerResponse.ok().body(fromValue(geoPoint)))
                     .switchIfEmpty(ServerResponse.noContent().build());
 
         } else if (user.isPresent() && StringUtils.hasLength(user.get())) {
-            return geoPointService.getLastPositionByUser(user.get()).flatMap(geoPoint -> ServerResponse.ok()
-                                    .body(fromValue(geoPoint)))
-                            .switchIfEmpty(ServerResponse.noContent().build());
+            return lazy.flatMap( t -> geoPointService.getLastPositionByUser(user.get()))
+                    .flatMap(geoPoint -> ServerResponse.ok().body(fromValue(geoPoint)))
+                    .switchIfEmpty(ServerResponse.noContent().build());
 
         } else throw new ServerWebInputException("Some parameter does not have to be empty");
+
     }
 
 
