# geotracking-reactive-functional-microservice/src/main/resources/openapi/geotracking-definitions.yaml
@@ -114,6 +114,14 @@ paths:
                     schema:
                         type: string
                     example: 1111222XXXXXXX
+                -   name: testLazyTime
+                    in: query
+                    description: Time in seconds that the service is lazy.
+                    required: false
+                    schema:
+                        type: integer
+                        default: 0
+                    example: 5
 
             responses:
                 "200":
